# beak-amrie

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ui-plan.md
docs/: architecture.md  breakpoint-selection.md  cli-reference.md  configuration.md  data-formats.md  development.md  expert-rules.md  upstream-sync.md  use-cases.md  web.md
src/amrie/: __init__.py  antibiotic.py  antibiotic_rules.py  breakpoint.py  cli.py  config.py  constants.py  expected_resistance.py  expert_rule.py  io_library.py  io_utils.py  isolate.py  messages.py  organism.py  parsing.py  paths.py  qc.py
tests/: test_parity.py  test_qc.py
tests/fixtures/: esbl_config.json  golden_sample_output.txt  vertical_config.json  vertical_udb_config.json
web/: __init__.py  helpers.py  main.py  state.py
web/api/: breakpoints.py  interpret.py  qc.py  reference.py  rules.py
web/components/: breakpoint_dialog.py  expert_dialog.py  filters.py  header.py  intrinsic_dialog.py
web/models/: __init__.py  requests.py  responses.py
web/pages/: __init__.py  file_mode.py  qc.py  single.py
